<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.group3.smartshop.LoginActivity">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/bg_3"
        android:weightSum="1">


        <ImageView
            android:contentDescription="logo"
            android:layout_width="180dp"
            android:layout_height="160dp"
            android:src="@drawable/cover_icon"
            android:layout_weight="0.36"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="0dp"
            android:id="@+id/imageView2" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_marginBottom="10dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <!-- Login Button -->

        <Button
            android:id="@+id/btn_login"
            android:background="@drawable/side_nav_bar"
            android:text="@string/login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:textColor="@android:color/black" />

        <!--
        <Button
            android:id="@+id/btn_login_guest"
            android:background="@null"
            android:text="@string/login_as_guest"
            android:layout_marginTop="10dip"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent" -->

        <Button
            android:id="@+id/btn_reset_password"
            android:background="@null"
            android:text="@string/forgot_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent" />

        <!-- Link to Login Screen -->
        <Button
            android:id="@+id/btn_signup"

            android:background="@null"
            android:text="@string/link_to_register"
            android:layout_width="376dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:visibility="gone" />
</android.support.design.widget.CoordinatorLayout>

